unpackaged/main/default/objects/Forecast_Weighting__c/Forecast_Weighting__c.object-meta.xml
<CustomObject>
    <label>Forecast Weighting</label>
    <nameField>
        <label>Forecast Weighting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Weightings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>