unpackaged/main/default/objects/Forecast_Weighting__c/fields/Default_Probability__c.field-meta.xml
<CustomField>
    <fullName>Default_Probability__c</fullName>
    <label>Default Probability</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>