unpackaged/main/default/objects/Forecast_Weighting__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(1) Qualification</fullName>
            </value>
            <value>
                <fullName>(1) Onboarding</fullName>
            </value>
            <value>
                <fullName>(2) Discovery</fullName>
            </value>
            <value>
                <fullName>(2) Nurture</fullName>
            </value>
            <value>
                <fullName>(3) POC Scoping</fullName>
            </value>
            <value>
                <fullName>(3) Proposal</fullName>
            </value>
            <value>
                <fullName>(4) Proof of Concept</fullName>
            </value>
            <value>
                <fullName>(5) Validating Business Case/Negotiating</fullName>
            </value>
            <value>
                <fullName>(6) Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>