unpackaged/main/default/objects/Forecast_Weighting__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Booking_Subtypes</valueSetName>
    </valueSet>
</CustomField>